--- a/view/aboutus.html
+++ b/view/aboutus.html
@@ -6,7 +6,7 @@
 
             <div class="aboutus-company-text">
                 <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    Originally named as HDR Motor in 1985 focus mainly in Indonesia market as a car seat leather distributors and other car accessories suppliers for Indonesia market. In 2021, JMM Auto is established focusing on retail and overseas market.
                 </p>
             </div>
         </div>
@@ -18,7 +18,9 @@
                 </h2>
 
                 <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                    As we are expertising in the Car Seat Leather Industry, we are the right partner for you to enhance your business performance especially in the automotive interior industry, as we are always committed to the trust, quality and precision of our products.
+                    <br><br>
+                    Our mission is to be the best in delivering our products and also provide the solution in the industry.
                 </p>
             </div>
 
