--- a/view/home.html
+++ b/view/home.html
@@ -17,7 +17,7 @@
         <div class="home-about-content">
             <h1><span class="jmm">JMM </span>AUTO</h1><br>
 
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. <br><br> It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>We are car seat leather makers originally from Indonesia. Located in Jln. Danau Sunter Utara Block C1 No.15, Jakarta. We specialize in the design, manufacturing, sales and service of car/bus seats with clients covering whole Indonesia. We have an experience in the industry for over 25+ years and have been trusted by many auto workshops across Indonesia.</p>
         </div>
     </section>
     
