penyempurnaan contact us

--- a/view/contactus.html
+++ b/view/contactus.html
@@ -5,44 +5,46 @@
             <div class="supportus-container">
                 <div class="supportus-form">
                     <h1>CONTACT</h1><br>
-                    <form 
-                        action="mailto:jmmauto@gmail.com" 
+                        <form 
+                        action="mailto:jmmauto@gmail.com?subject=Message%20from%20Website" 
                         method="POST" 
-                        enctype="text/plain">
-                        
+                        enctype="text/plain"
+                        >
                         <input 
                             type="text" 
                             name="Full Name" 
                             placeholder="Full Name" 
-                            required>
-                        
+                            required
+                        >
+
                         <input 
                             type="email" 
                             name="Email" 
                             placeholder="Email" 
                             required
                         >
-                        
+
                         <input 
                             type="tel" 
                             name="Phone Number" 
                             placeholder="Phone Number" 
                             required
                         >
-                        
+
                         <textarea 
                             name="Message" 
                             placeholder="Message" 
                             rows="5" 
-                            required>
-                        </textarea>
-                        
+                            required
+                        ></textarea>
+
                         <button 
                             type="submit" 
-                            class="supportus-btn">
+                            class="supportus-btn"
+                        >
                             SUBMIT
                         </button>
-                    </form>
+                        </form>
                 </div>
             </div>
         </section>
