--- a/view/aboutus.html
+++ b/view/aboutus.html
@@ -14,7 +14,7 @@
         <div class="aboutus-desc reverse-on-mobile-reverse" >
             <div class="aboutus-desc-content">
                 <h2>
-                    TITLE
+                    WHY US?
                 </h2>
 
                 <p>
