--- a/css/product-view.css
+++ b/css/product-view.css
@@ -32,9 +32,24 @@
     font-size: 1rem;
     line-height: 1.6;
     color: var(--white);
-    text-align: justify;
+    text-align: justify; 
 }
 
+.productv-caption.with-features {
+    text-align: center;
+}
+
+.productv-caption.with-features p {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.productv-caption.with-features ul {
+    display: inline-block; 
+    text-align: left; 
+    margin: 1rem auto 0 auto;
+    padding-left: 20px;
+}
 .productv-img {
     flex: 1;
     text-align: center;
