--- a/css/product-view.css
+++ b/css/product-view.css
@@ -45,6 +45,9 @@
 }
 
 .productv-caption.with-features ul {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: var(--white);
     display: inline-block; 
     text-align: left; 
     margin: 1rem auto 0 auto;
