--- a/view/aboutus.html
+++ b/view/aboutus.html
@@ -13,7 +13,7 @@
 
         <div class="aboutus-desc reverse-on-mobile-reverse" >
             <div class="aboutus-desc-content">
-                <h2>
+                <h2 class="aboutus-desc-content-title">
                     WHY US?
                 </h2>
 
@@ -25,7 +25,7 @@
             </div>
 
             <div class="aboutus-desc-img">
-                <img src="/assets/aboutus/image.jpg" alt="aboutus-desc-img">
+                <img src="/assets/aboutus/sewing.jpg" alt="aboutus-desc-img">
             </div>
         </div>
 
