--- a/view/home.html
+++ b/view/home.html
@@ -25,7 +25,7 @@
         <div class="catalog-section" id="view">
             <div class="catalog-h1-title">
                 <h1>
-                    OUR PRODUCTS
+                    POPULAR PRODUCTS
                 </h1>
             </div>
 
