--- a/view/product-cat.html
+++ b/view/product-cat.html
@@ -13,7 +13,7 @@
         </a>
 
         <a href="#/product-view?id=2" class="catalog-item">
-            <img src="/assets/catalog/leather-mat/leather-mat-3.png">
+            <img src="/assets/catalog/leather-mat/leather-mat-2.png">
             <div class="catalog-title">Car Leather Floor Mat</div>
         </a>
 
@@ -29,12 +29,12 @@
 
         <a href="#/product-view?id=5" class="catalog-item">
             <img src="assets/catalog/not-found.png">
-            <div class="catalog-title">Insert Title</div>
+            <div class="catalog-title">Coming Soon</div>
         </a>
 
         <a href="#/product-view?id=6" class="catalog-item">
             <img src="assets/catalog/not-found.png">
-            <div class="catalog-title">Insert Title</div>
+            <div class="catalog-title">COMING SOON</div>
         </a>
     </div>
 
