--- a/css/home.css
+++ b/css/home.css
@@ -121,6 +121,15 @@
 }
 
 @media screen and (max-width: 768px) {
+    .head-logo img {
+        width: 60px !important;
+        height: auto;
+    }
+
+    .head-container {
+        padding: 0.5rem 1rem;
+    }
+
     .banner-content h1 {
         font-size: 3rem !important; 
         line-height: 1;
@@ -129,28 +138,22 @@
     .banner-content p {
         font-size: 1.5rem !important; 
     }
-}
-
-@media screen and (max-width: 768px) {
-    .catalog-h1-title {
-        text-align: center; 
-        margin: 0 auto 1.5rem; 
-        width: 100%;
-    }
 
     .catalog-h1-title h1 {
-        font-size: 20px;
-        display: inline-block; 
+        text-align: center !important;
+        font-size: 1.8rem !important;
         position: relative;
+        margin-bottom: 1.5rem;
     }
 
     .catalog-h1-title h1::after {
         content: "";
-        display: block;
-        width: 50%; 
-        max-width: 100px;
-        height: 3px;
-        background: var(--orange);
-        margin: 8px auto 0; 
+        position: absolute;
+        bottom: -6px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 60%;
+        height: 2px;
+        background: #000;
     }
 }
